Table overflow bug fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,11 +15,16 @@ body {
 	overflow-x: hidden;
 }
 
+html {
+	overflow-x: hidden;
+}
+
 // classes
 .logo-grad {
 	background: -webkit-linear-gradient(to right, $orange 0%, $pink 100%);
 	background: -moz-linear-gradient(to right, $orange 0%, $pink 100%);
 	background: linear-gradient(to right, $orange 0%, $pink 100%);
+	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
